# tele-api-spec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  index.html  openapi.json  openapi.min.json  openapi.simplified.json  openapi.simplified.min.json  openapi.simplified.yaml  openapi.yaml  rustfmt.toml
.github/workflows/: ci.yml  cron-deploy.yml
tele-api-parser/: Cargo.toml
tele-api-parser/src/: extractor.rs  lib.rs  parser.rs
tele-api-parser/src/parser/: sentence.rs  tags.rs
tele-api-spec/: Cargo.toml  base-schema.yml
tele-api-spec/src/: main.rs  openapi.rs
